refactor: Update application name and description
The application name has been updated from "AxisKey Pro: Master Mapper" to "AxisKey Pro: Precision Mapper" across project configuration files and metadata. The application description has also been refined to better reflect its features, focusing on "hardware-direct key-mapping" and a "BlueStacks-spec engine" for zero-latency input. Additionally, an unnecessary camera permission request has been removed.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "axiskey-pro:-master-mapper",
+  "name": "axiskey-pro:-precision-mapper",
   "private": true,
   "version": "0.0.0",
   "type": "module",
